--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <br>
 <br>
 
-<img style="padding: 0 15px; float: right;" src="D:\desktop\EVERYTHING\My_Page\aboutimage.jpg" alt="my pic">
+<img style="padding: 0 15px; float: right;" src="aboutimage.jpg" alt="my pic">
  <p style="margin-top: 20px;">
     
 
