--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Myself</title>
-        <link rel="stylesheet" href="D:\desktop\EVERYTHING\My_Page\style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body class="contactme">
 
         <header class="contactback">
-        <a href="D:\desktop\EVERYTHING\My_Page\index.html" class="backbutton">&#8619; 
+        <a href="index.html" class="backbutton">&#8619; 
             </a>
             </header>
 
@@ -30,19 +30,19 @@
                 <ul>
                     
                <li> <a href="https://www.facebook.com" target="_blank" class="facebook">
-                   <img src= "D:\desktop\EVERYTHING\My_Page\facebook.png" alt="_Facebook">
+                   <img src= "facebook.png" alt="_Facebook">
                </a> </li>
 
-               <li> <a class="snapchat"> <img src= "D:\desktop\EVERYTHING\My_Page\resizedImage.png"> </a> </li>
+               <li> <a class="snapchat"> <img src= "resizedImage.png"> </a> </li>
 
                <li> <a href="https://www.google.com/search?q=sonal+bera&rlz=1C1CHBF_enKW851KW851&oq=sonal+bera&aqs=chrome..69i57j69i60l5.1711j0j1&sourceid=chrome&ie=UTF-8" target="_blank" class="google">
-                <img src="D:\desktop\EVERYTHING\My_Page\google.png" alt="Google Sonal"></a> </li>
+                <img src="google.png" alt="Google Sonal"></a> </li>
 
                 <li><a href="https://www.instagram.com/sonal_sb/" target="_blank" class="instagram"> 
-                    <img src="D:\desktop\EVERYTHING\My_Page\instagram.png" alt="Instagram"></a> </li>
+                    <img src="instagram.png" alt="Instagram"></a> </li>
 
                     <li><a href="https://sonalbera.blogspot.com/"  target="_blank" class="blogger"> 
-                        <img src="D:\desktop\EVERYTHING\My_Page\blogger.png"  alt="Blogger"></a> </li>  
+                        <img src="blogger.png"  alt="Blogger"></a> </li>  
                 </ul>
 
                 </div>
