--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Home</title>
-		<link rel="stylesheet" href="D:\desktop\EVERYTHING\My_Page\style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	
 	
@@ -15,14 +15,14 @@
 		
 
 			<div class="logo">
-					<img src="D:\desktop\EVERYTHING\My_Page\logo.gif">
+					<img src="logo.gif">
 					
 				  </div>
 
 		<ul>
-			<li><a href="D:\desktop\EVERYTHING\My_Page\index.html">&#x1F3E0;</a></li>
-			<li><a href="D:\desktop\EVERYTHING\My_Page\about.html">Get to Know Me</a></li>
-			<li><a href="D:\desktop\EVERYTHING\My_Page\contact.html">Get in Touch</a></li>
+			<li><a href="index.html">&#x1F3E0;</a></li>
+			<li><a href="about.html">Get to Know Me</a></li>
+			<li><a href="contact.html">Get in Touch</a></li>
 				</ul>
 		
 		
